[package]
name = "simplex_method"
version = "0.1.3"
edition = "2021"
description = "Library for optimisation in linear programming using simplex method"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.3"
log = "0.4.14"
